--- a/web/WEB-INF/jsp/base.jspf
+++ b/web/WEB-INF/jsp/base.jspf
@@ -1,3 +1,3 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
 <%@ taglib prefix="template" tagdir="/WEB-INF/tags/template" %>
